fix: Fix navbar drawer scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,14 @@
 /* thanks to dbgordon09 */
 /* https://github.com/saadeghi/daisyui/issues/3040#issuecomment-2250530354 */
 
-:root:has(:is(.modal-open, .modal:target, .modal-toggle:checked + .modal, .modal[open])) {
+:root:has(
+		:is(
+				.drawer-toggle:checked,
+				.modal-open,
+				.modal:target,
+				.modal-toggle:checked + .modal,
+				.modal[open]
+			)
+	) {
 	scrollbar-gutter: unset;
 }
